--- a/style.css
+++ b/style.css
@@ -51,42 +51,70 @@ section {
 #contact {
     background-color: #cccccc; /* Darkest gray background */
 }
-
 #projects {
+}
+#project-slider {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow: scroll-y;
+    overflow-x: scroll;
+    width: fit-content;
+    max-width: 100%;
+    height: 30em;
+    margin: 0 auto;
 }
 .project {
-    min-width: 100vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+
+    box-sizing: border-box;
+    width: max-content;
+    min-width: 20em;
+    max-width: 100vw;
+    height: 100%;
+    border-radius: 16px;
+    margin: 0 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1em;
+    padding-top: 2em;
 }
 .title {
-    position: relative;
-    top: 1em;
-    left: 50%;
-    transform: translate(-100%, -50%);
+    color: white;
+    font-weight: bold;
+    padding: 0.25em 0.5em;
+    background-color: rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    margin-bottom: 1em;
 }
 .one-line-desc {
-    position: relative;
-    bottom: 4em;
-    left: 50%;
-    transform: translate(-100%, -50%);
+    padding-top: 8em;
+    flex-grow: 1;
 }
+
+
 .project ul {
-    position: relative;
-    top: 4em;
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    overflow: scroll-y;
+    flex-wrap: wrap;
 }
 .project ul li {
     min-width: fit-content;
-    margin: 0.5em;
+    margin: 0 0.25em;
+}
+.project li img {
+    width: 24px;
+    height: 24px;
+    padding: 0.5em;
+    background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 50%;
 }
 
 h1, h2 {
