--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    transition: background-color 0.5s ease; /* Smooth transition for background color change */
 }
 
-header {
-    position: sticky;
-    top: -1px;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.9); /* Transparent white background */
-    box-sizing: border-box;
-}
-header h1 {
-    padding-left: 2em;
-}
+
 nav {
-    padding: 0.5em;
+    position: fixed;
+    z-index: 1;
+    width: fit-content;
+    top: 0.5em;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
 
 nav ul {
@@ -29,30 +23,180 @@ nav ul {
     align-items: center;
 }
 
+nav ul li {
+    margin: 0 1.5em;
+}
+
+nav ul li:first-child {
+    margin-left: 0;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+nav ul li a {
+    display: block;
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: lightyellow;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    box-shadow: 0 0 0 1px black;
+}
+
+nav ul li a.current {
+    background-color: yellow;
+}
+
+nav a span {
+    position: absolute;
+    width: fit-content;
+}
+
+#landing-a:hover span,
+#landing-a.current span {
+    animation: pinit 0.5s ease-out;
+}
+
+#projects-a:hover span,
+#projects-a.current span {
+    animation: dropfolder 0.5s ease-out;
+}
+
+#contact-a:hover span,
+#contact-a.current span {
+    animation: mailup 0.5s ease-out;
+}
+
+#workflow-a:hover span,
+#workflow-a.current span {
+    animation: rocketlaunch 0.5s ease-out;
+}
+
+@keyframes pinit {
+    50% {
+        transform: translate(0.5em, -0.5em);
+    }
+}
+
+@keyframes dropfolder {
+    50% {
+        transform: translate(0, -0.5em);
+    }
+}
+
+@keyframes mailup {
+    50% {
+        transform: translate(0, 0.5em);
+    }
+}
+
+@keyframes rocketlaunch {
+    50% {
+        transform: translate(-0.5em, 0.5em);
+    }
+}
+
 section {
-    padding: 2em 1em;
+    padding: 0 1em;
+    padding-top: 2em;
     text-align: center;
     height: 100vh;
+    border-bottom: 1px solid black;
     box-sizing: border-box;
 }
 
 #landing {
-    background-color: #f4f4f4; /* Light gray background */
+    background-color: #f4f4f4;
+    /* Light gray background */
 }
 
 #projects {
-    background-color: #e8e8e8; /* Slightly darker gray background */
+    background-color: #e8e8e8;
+    /* Slightly darker gray background */
 }
 
 #workflow {
-    background-color: #dcdcdc; /* Even darker gray background */
+    background-color: #dcdcdc;
+    /* Even darker gray background */
 }
 
 #contact {
-    background-color: #cccccc; /* Darkest gray background */
+    background-color: #cccccc;
+    /* Darkest gray background */
 }
-#projects {
+
+#table {
+    margin: 0 auto;
+    margin-top: 2em;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+    width: 100%;
+    max-width: 30em;
 }
+
+#table>div:nth-child(odd) {
+    font-size: 24px;
+    border: 1px solid black;
+    border-right: none;
+    border-top: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5em;
+}
+
+#table>div:nth-child(even) {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    padding-left: 1em;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
+
+
+#languages,
+#skills,
+#technologies {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+    overflow-x: scroll;
+}
+
+#languages span,
+#skills span {
+    min-width: fit-content;
+    margin: 0 0.25em;
+    padding: 0.25em 0.5em;
+}
+#languages span {
+    border-right: 2px solid red;
+}
+#skills span {
+    background-color: lightpink;
+}
+#technologies span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0.5em;
+}
+#technologies span img {
+    width: 24px;
+    height: 24px;
+}
+
 #project-slider {
     display: flex;
     flex-direction: row;
@@ -60,9 +204,37 @@ section {
     overflow-x: scroll;
     width: fit-content;
     max-width: 100%;
-    height: 30em;
+    height: 32em;
     margin: 0 auto;
 }
+
+.new-project {
+    background-color: orange;
+
+    box-sizing: border-box;
+    width: max-content;
+    min-width: 20em;
+    max-width: 100vw;
+    height: 100%;
+    border-radius: 16px;
+    margin: 0 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1em;
+    padding-top: 2em;
+    position: relative;
+}
+
+.new-project a {
+    position: absolute;
+    top: 50%;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
+
 .project {
     background-repeat: no-repeat;
     background-position: center;
@@ -82,18 +254,65 @@ section {
     align-items: center;
     padding: 0 1em;
     padding-top: 2em;
+    position: relative;
 }
+
+.date {
+    color: white;
+    font-size: 12px;
+
+    position: absolute;
+    bottom: 1em;
+    left: 1em;
+}
+
 .title {
     color: white;
     font-weight: bold;
-    padding: 0.25em 0.5em;
+    padding: 0.25em 1em;
     background-color: rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
     margin-bottom: 1em;
 }
+
 .one-line-desc {
     padding-top: 8em;
     flex-grow: 1;
+}
+
+.emoji {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+
+    position: absolute;
+    top: 0.5em;
+    left: 0.5em;
+}
+
+.project a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+
+    position: absolute;
+    bottom: 0.5em;
+    right: 0.5em;
+
+    text-decoration: none;
+    padding: 0.5em;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.project a:hover {
+    background-color: lightskyblue;
 }
 
 
@@ -105,30 +324,125 @@ section {
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 .project ul li {
     min-width: fit-content;
     margin: 0 0.25em;
 }
+
 .project li img {
     width: 24px;
     height: 24px;
-    padding: 0.5em;
+    padding: 0.25em;
     background-color: rgba(255, 255, 255, 0.25);
     border-radius: 50%;
 }
 
-h1, h2 {
-    color: #333; /* Dark text color */
+#contact {
+    position: relative;
 }
 
-/* Add more styles as needed */
-
-/* Change header background and text color on scroll */
-body.scrolled header {
-    background-color: #333; /* Dark background color */
-    color: #fff; /* Light text color */
+#contact-links {
+    position: absolute;
+    top: 4em;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-footer {
-    text-align: center;
+#contact-links a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-right: none;
+    border-radius: 2em 0 0 2em;
+    padding-left: 2em;
+}
+
+#contact-links a span {
+    position: relative;
+    transform: translateX(1.5em);
+    box-shadow: 0 0 0 1px black;
+    padding: 1em;
+    border-radius: 50%;
+}
+
+#contact-links a:hover {
+    background-color: black;
+    color: white;
+}
+
+#contact-links a:hover span {
+    background-color: lightskyblue;
+}
+
+#workflow ul {
+    list-style-type: none;
+    padding: 0;
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 3em;
+}
+#workflow li {
+    margin: 1em 0;
+    padding: 1em;
+    border: 1px solid black;
+    animation: consumption 4s infinite;
+}
+#workflow li:nth-child(1) {
+    animation-delay: 1s;
+}
+#workflow li:nth-child(2) {
+    animation-delay: 1.5s;
+}
+#workflow li:nth-child(3) {
+    animation-delay: 2s;
+}
+#workflow li:nth-child(4) {
+    animation-delay: 2.5s;
+}
+#workflow li:nth-child(5) {
+    animation-delay: 3s;
+}
+#workflow li:nth-child(6) {
+    animation-delay: 3.5s;
+}
+
+#workflow li:last-child {
+    width: min-content;
+    margin: auto;
+    margin-top: 1em;
+    border-radius: 50%;
+    font-size: 24px;
+    animation: goldglow 3s infinite;
+}
+@keyframes goldglow {
+    0%, 100% {
+        box-shadow: 0 0 0 0 transparent;
+    }
+    50% {
+        box-shadow: 0 0 0 0.5em gold;
+    }
+}
+@keyframes consumption {
+    25% {
+        box-shadow: 0 -8px 0 8px lightskyblue;
+    }
+    50% {
+        box-shadow: 0 0 0 0 lightskyblue;
+    }
+    100% {
+        background-color: lightskyblue;
+    }
+}
+
+#workflow a {
+    text-decoration: none;
 }
